# quant-code

./: .env.example  .gitignore  DECISIONS.md  HANDOFF.md  MASTER_PROMPT.md  README.md  TESTING.md  devpost_answers.md  improved_backtest_learning.md  pyproject.toml  redesign.md  redis_implementation.md  requirements.txt  run_tests.sh
deprecated/core/: __init__.py  exceptions.py
deprecated/future/: broker.py  experiments.py
deprecated/models/: base.py  openai_compatible.py
deprecated/strategy_research/agents/: hypothesis_generator.py  memory_proposal.py  strategy_formalizer.py
deprecated/strategy_research/tools/: research_catalog.py  validation.py
docs/: agent_flow.md  architecture.md  benchmarks.md  future_milestones.md  judging.txt  sponsor_tech_references.md  system_design_diagram.md
frontend/: .env.example  .gitignore  README.md  REDESIGN_PLAN.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/agent/: page.tsx
frontend/src/app/api/backend/agent/backtest/: route.ts
frontend/src/app/api/backend/agent/reading/: route.ts
frontend/src/app/api/backend/compaction/[run_id]/: route.ts
frontend/src/app/api/backend/memory/episodes/: route.ts
frontend/src/app/api/backend/memory/lessons/: route.ts
frontend/src/app/api/backend/overview/: route.ts
frontend/src/app/api/backend/runs/: route.ts
frontend/src/app/api/backend/runs/[run_id]/: route.ts
frontend/src/app/api/backend/runs/latest/: route.ts
frontend/src/app/api/backend/strategies/: route.ts
frontend/src/app/api/backend/strategies/save/: route.ts
frontend/src/app/compaction/: page.tsx
frontend/src/app/memory/: page.tsx
frontend/src/app/runs/: page.tsx
frontend/src/app/runs/[run_id]/: page.tsx
frontend/src/app/strategies/: page.tsx
frontend/src/components/agent/: CommandCard.tsx
frontend/src/components/layout/: TopNav.tsx
frontend/src/components/ui/: primitives.tsx  states.tsx  tags.tsx
frontend/src/lib/: api.ts  commandIntent.ts  iterationDraft.ts  research.ts  strategyLatex.ts  useApi.ts  utils.ts
frontend/src/lib/server/: dashboardData.ts
frontend/src/types/: index.ts
leftover_tasks/: 01_dashboard.md  02_live_redis.md  03_live_llm_claude.md  04_live_browserbase.md  05_compaction_demo_polish.md  06_lesson_quality.md  07_fastembed_offline_readiness.md  08_benchmarks.md  09_commit_build.md  README.md
quant_code/: __init__.py  cli.py  config.py  logging.py
quant_code/core/: ids.py
quant_code/future/: __init__.py  memory.py
quant_code/models/: __init__.py  mock.py  ollama.py  router.py
quant_code/strategy_research/: __init__.py  schemas.py  workflow.py
quant_code/strategy_research/agents/: __init__.py  base.py  data_feasibility.py  experiment_planner.py  market_mechanism.py  prior_art_discovery.py  research_critic.py  research_director.py
quant_code/strategy_research/tools/: data_catalog.py  feasibility.py  strategy_templates.py
quant_forge/: __init__.py  cli.py
quant_forge/core/: json_utils.py
quant_forge/future/: backtesting.py  data_sources.py  memory.py
quant_forge/models/: __init__.py  mock.py  ollama.py  openai_compatible.py  router.py
quant_forge/strategy_research/: __init__.py  prompts.py  schemas.py  workflow.py
quant_forge/strategy_research/agents/: __init__.py  base.py  data_feasibility.py  experiment_planner.py  hypothesis_generator.py  market_mechanism.py  memory_proposal.py  prior_art_discovery.py  research_critic.py  research_director.py  strategy_formalizer.py
quant_forge/strategy_research/tools/: __init__.py  feasibility.py  feature_catalog.py  mutation.py  research_catalog.py  validation.py
quantcode/: README.md  __init__.py  benchmarks.py  config.py  lesson_quality.py
quantcode/agents/: README.md  __init__.py  __main__.py  base.py  data_feasibility.py  experiment_planner.py  hypothesis_generator.py  market_mechanism.py  prior_art_discovery.py  research_critic.py  research_director.py  strategy_formalizer.py  strategy_writer.py
quantcode/browser/: README.md  __init__.py  __main__.py  agent.py
quantcode/cli/: README.md  __init__.py  __main__.py
quantcode/compaction/: README.md  __init__.py  __main__.py  compiler.py  tokenizer.py
quantcode/dashboard/: README.md  __init__.py  api.py  backtest.py  sources.py
quantcode/dashboard/panels/: README.md
quantcode/llm/: __init__.py  __main__.py  base.py  mock.py  providers.py
quantcode/memory/: README.md  __init__.py  __main__.py  _embeddings.py  client.py  curator.py
quantcode/memory/tier1_working/: README.md  __init__.py
quantcode/memory/tier2_episodic/: README.md  __init__.py
quantcode/memory/tier3_semantic/: README.md  __init__.py
quantcode/pipeline/: README.md  __init__.py  __main__.py
quantcode/schemas/: README.md  __init__.py  __main__.py
quantcode/tools/: README.md  __init__.py  __main__.py  data_catalog.py  experiment_runner.py  feature_catalog.py  validator.py
quantcode/workspace/: README.md  __init__.py  __main__.py
tests/: conftest.py  test_agents_mock.py  test_cli.py  test_schemas.py  test_selfchecks.py  test_tools.py  test_workflow.py
workspace/: README.md
workspace/memory/: README.md
workspace/reports/: README.md
workspace/research_runs/: README.md
workspace/strategies/: README.md
