[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-code"
version = "0.1.0"
description = "A deterministic prototype of an agentic quant research layer"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "QuantCode contributors" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "pydantic>=2.7,<3",
  "python-dotenv>=1.0,<2",
  "rich>=13.7,<15",
  "typer>=0.12,<1",
  "redis>=5.0,<7",         # D2: memory substrate + RediSearch vector index
  "fastembed>=0.3,<1",     # D3: Tier 3 lesson embeddings (offline ONNX)
  "pyyaml>=6,<7",          # D6: StrategySpec YAML I/O
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10,<2",
  "pytest>=8.2,<10",
  "ruff>=0.5,<1",
  "types-PyYAML>=6,<7",
]
# D1: real Claude path — lazy-imported, installed only when leaving mock (HITL-gated 1st call)
llm = [
  "anthropic>=0.40,<1",
]
# Browserbase research-url track (Phase 2) — also needs `playwright install chromium`
browser = [
  "browserbase>=1.0,<2",
  "playwright>=1.44,<2",
]

[project.scripts]
quantcode = "quantcode.cli:app"

[tool.setuptools.packages.find]
include = ["quantcode*"]
exclude = ["deprecated*", "tests*", "frontend*", "docs*", "workspace*", "leftover_tasks*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
exclude = ["tests/"]

# Optional / unstubbed third-party deps (installed conditionally or ship no stubs)
[[tool.mypy.overrides]]
module = ["anthropic.*", "fastembed.*"]
ignore_missing_imports = true
