[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-code"
version = "0.1.0"
description = "A deterministic prototype of an agentic quant research layer"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "QuantCode contributors" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
# Core install is fully local & free — no servers, no API keys. Memory persists to a
# local SQLite file; lesson embeddings use a deterministic hash; URL fetch is a stdlib GET.
dependencies = [
  "pydantic>=2.7,<3",
  "python-dotenv>=1.0,<2",
  "rich>=13.7,<15",
  "typer>=0.12,<1",
  "pyyaml>=6,<7",          # StrategySpec YAML I/O
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10,<2",
  "pytest>=8.2,<10",
  "ruff>=0.5,<1",
  "types-PyYAML>=6,<7",
]
# Real semantic embeddings (BAAI/bge-small via offline ONNX) + measured token counts.
embeddings = [
  "fastembed>=0.3,<1",
]
# Real Claude path — lazy-imported, installed only when leaving the mock provider.
llm = [
  "anthropic>=0.40,<1",
]
# JS-rendered page scraping for `research-url` (set QC_BROWSER_RENDER=1). No paid service;
# also needs `playwright install chromium`. The default fetch is a plain stdlib GET.
browser = [
  "playwright>=1.44,<2",
]
# Optional Redis + RediSearch memory backend (QC_MEMORY_BACKEND=redis).
redis = [
  "redis>=5.0,<7",
]

[project.scripts]
quantcode = "quantcode.cli:app"

[tool.setuptools.packages.find]
include = ["quantcode*"]
exclude = ["deprecated*", "tests*", "frontend*", "docs*", "workspace*", "leftover_tasks*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
exclude = ["tests/"]

# Optional / unstubbed third-party deps (installed conditionally or ship no stubs)
[[tool.mypy.overrides]]
module = ["anthropic.*", "fastembed.*", "playwright.*", "redis.*"]
ignore_missing_imports = true
